--- a/index.html
+++ b/index.html
@@ -30,5 +30,137 @@
         </div>
         </div>
 
+        <script src="https://static.line-scdn.net/liff/edge/versions/2.9.0/sdk.js"></script>
+        <script>
+        async function shareMsg() {
+      await liff.shareTargetPicker([
+      {
+          "type": "flex",
+          "altText": "รับสมัคร Website Developer ",
+          "contents": {
+  "type": "carousel",
+  "contents": [
+    {
+      "type": "bubble",
+      "body": {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [
+          {
+            "type": "image",
+            "url": "https://lh6.googleusercontent.com/ewsqwtOxw7cdwg0agodxFUNhSFbaLiAm2QaxEg_SR97SYzaBwwAMCDlzgizzl9F3a2XjijBzag4bDYhGUb6l5hYfQEqCIYBMn0hwyMsGSiElziAptdmtv09S2LFS98bb5A=w1280",
+            "size": "full",
+            "aspectMode": "cover",
+            "aspectRatio": "2:3",
+            "gravity": "top"
+          },
+          {
+            "type": "box",
+            "layout": "vertical",
+            "contents": [
+              {
+                "type": "text",
+                "text": "Now Recruiting",
+                "color": "#ffffff",
+                "align": "center",
+                "size": "xs",
+                "offsetTop": "3px"
+              }
+            ],
+            "position": "absolute",
+            "cornerRadius": "20px",
+            "offsetTop": "18px",
+            "backgroundColor": "#ff334b",
+            "offsetStart": "18px",
+            "height": "25px",
+            "width": "110px"
+          }
+        ],
+        "paddingAll": "0px"
+      },
+      "footer": {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "label": "APPLY NOW",
+              "uri": "https://rebrand.ly/LANDinRecruitment"
+            },
+            "style": "primary",
+            "height": "sm",
+            "color": "#162b66"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "label": "for more information",
+              "uri": "https://line.me/ti/p/taMdj5boVo"
+            },
+            "height": "sm",
+            "style": "secondary"
+          }
+        ],
+        "spacing": "md",
+        "backgroundColor": "#ffc34a"
+      }
+    },
+    {
+      "type": "bubble",
+      "body": {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [
+          {
+            "type": "image",
+            "url": "https://lh4.googleusercontent.com/2ZlkZE7dz_PPjH03CvUUXG2esvxvRzw70j8d8ZSnGQKLHSv6M906caAnckhkvDNeN9TB7pAtMmgXbrFMOtsBdi662ONa6gcA0AhT6cx6m2AcFdpnB10ycNBv4vgXYn7gDQ=w1280",
+            "size": "full",
+            "aspectMode": "cover",
+            "aspectRatio": "2:3",
+            "gravity": "top"
+          }
+        ],
+        "paddingAll": "0px"
+      },
+      "footer": {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "label": "APPLY NOW",
+              "uri": "https://rebrand.ly/LANDinRecruitment"
+            },
+            "style": "primary",
+            "height": "sm",
+            "color": "#162b66"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "label": "for more information",
+              "uri": "https://line.me/ti/p/taMdj5boVo"
+            },
+            "height": "sm",
+            "style": "secondary"
+          }
+        ],
+        "spacing": "md",
+        "backgroundColor": "#ffc34a"
+      }
+    }
+  ]
+}
+      }
+      ])
+    }
+</script>  
+
     </body>
 </html>
