--- a/path/answer.html
+++ b/path/answer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Path</title>
-  <link rel="stylesheet" href="../css/style.css">
+  
 </head>
 
 <body>
@@ -34,11 +34,11 @@
       document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
     }
     async function main() {
-      await liff.init({ liffId: "YOUR-LIFF-ID" })
+      await liff.init({ liffId: "1656153678-P9YzxRob" })
       if (liff.isLoggedIn()) {
         getUserProfile()
       } else {
-        liff.login({ redirectUri: "YOUR-GITHUB-PAGES-DOMAIN/liff/path/" })
+        liff.login({ redirectUri: "https://jamessakda.github.io/liff/path/" })
       }
     }
     main()
