--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                                             </div>
                                             <div class="work__img-tall">
                                                 <div class="pin w-embed">
-                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.pinterest.com/pin/create/button/?url=&media=https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37527c071f03f345b017_1070677-R1-E001.jpg&description=">
+                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.facebook.com/galewalee">
                                                         <img src="IMG_2029.jpg"/>
                                                     </a>
                                                 </div>
