--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                                             </div>
                                             <div class="work__img-tall">
                                                 <div class="pin w-embed">
-                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.facebook.com/galewalee">
+                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.pinterest.com/pin/672091944369876886/">
                                                         <img src="IMG_2029.jpg"/>
                                                     </a>
                                                 </div>
@@ -829,19 +829,19 @@
                                         <div role="listitem" class="work__item w-dyn-item">
                                             <div class="work__img-wide">
                                                 <div class="pin w-embed">
-                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.pinterest.com/pin/create/button/?url=&media=https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2.jpg&description=">
-                                                        <img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_round_red_32.png"/>
+                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg">
+                                                        <img src="IMG_2461.jpg"/>
                                                     </a>
                                                 </div>
-                                                <img loading="lazy" src="https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2.jpg" alt="" sizes="(max-width: 767px) 85vw, 33vw" srcset="https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-1080.jpeg 1080w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-1600.jpeg 1600w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-2000.jpeg 2000w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-2600.jpeg 2600w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-3200.jpeg 3200w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2.jpg 4849w" class="full-image"/>
+                                                <img loading="lazy" src="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg" alt="" sizes="(max-width: 767px) 85vw, 33vw" srcset="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 1080w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 1600w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 2000w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 2600w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 3200w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 4849w" class="full-image"/>
                                             </div>
                                             <div class="work__img-tall w-condition-invisible">
                                                 <div class="pin w-embed">
-                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.pinterest.com/pin/create/button/?url=&media=https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2.jpg&description=">
-                                                        <img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_round_red_32.png"/>
+                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg">
+                                                        <img src="IMG_2461.jpg"/>
                                                     </a>
                                                 </div>
-                                                <img loading="lazy" src="https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2.jpg" alt="" sizes="100vw" srcset="https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-1080.jpeg 1080w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-1600.jpeg 1600w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-2000.jpeg 2000w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-2600.jpeg 2600w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2-p-3200.jpeg 3200w, https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb37cfc826205c5d19ae65_6016104-R1-E005-2.jpg 4849w" class="full-image"/>
+                                                <img loading="lazy" src="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg" alt="" sizes="100vw" srcset="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 1080w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 1600w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 2000w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 2600w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 3200w, https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2461.jpg 4849w" class="full-image"/>
                                             </div>
                                         </div>
                                         <div role="listitem" class="work__item w-dyn-item">
