--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
                                             </div>
                                             <div class="work__img-tall w-condition-invisible">
                                                 <div class="pin w-embed">
-                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2028.jpg">
+                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.pinterest.com/pin/672091944369876886/">
                                                         <img src="IMG_2028.jpg"/>
                                                     </a>
                                                 </div>
@@ -819,7 +819,7 @@
                                             </div>
                                             <div class="work__img-tall">
                                                 <div class="pin w-embed">
-                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2460.jpg">
+                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.pinterest.com/pin/672091944369876886/">
                                                         <img src="IMG_2460.jpg"/>
                                                     </a>
                                                 </div>
