--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                                             </div>
                                             <div class="work__img-tall">
                                                 <div class="pin w-embed">
-                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.pinterest.com/pin/create/button/?url=&media=https://uploads-ssl.webflow.com/5fc5cccecf5884d730bdac08/5fcb383c3f2eea6057fa6f8c_1070678-R1-E010.jpg&description=">
+                                                    <a data-pin-do="buttonPin" data-pin-tall="true" data-pin-round="true" href="https://www.pinterest.com/pin/672091944369876886/">
                                                         <img src="IMG_2438.JPG"/>
                                                     </a>
                                                 </div>
