--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
                                                                 </div>
                                                                 <div class="tooltip__card is--mobile-reverse is--hour-tip">
                                                                     <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc99bfc16d98b9ac829be60_tooltip-top.svg" loading="lazy" alt="" class="tooltip__top is--mobile-reverse-icon is--hour-tip"/>
-                                                                    <p class="tooltip__text">This is the hours of coverage you need on your wedding day. Some like getting-ready photos, some like send offs, some want it all. The average wedding is eight hours start to finish but it’s your day so, you do you 💁🏻‍♀️ All packages include both Mack &amp; Pouya 💕</p>
+                                                                    <p class="tooltip__text">คำอธิบาย1</p>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1349,7 +1349,7 @@
                                                             </div>
                                                             <div class="tooltip__card is--mobile-reverse">
                                                                 <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc99bfc16d98b9ac829be60_tooltip-top.svg" loading="lazy" alt="" class="tooltip__top is--mobile-reverse-icon"/>
-                                                                <p class="tooltip__text">Let’s hang out and snap some casual photos without the rush of the wedding day. We typically shoot engagements on both film and digital, but it really depends on the setting. Shoots take between an hour to hour + half, but if you’re down to grab coffee after, it’s on us 🍻 </p>
+                                                                <p class="tooltip__text">คำอธิบาย2 </p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1388,7 +1388,7 @@
                                                             </div>
                                                             <div class="tooltip__card is--off">
                                                                 <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc99bfc16d98b9ac829be60_tooltip-top.svg" loading="lazy" alt="" class="tooltip__top is--off"/>
-                                                                <p class="tooltip__text">We can’t pass up a good wedding feature film but sometimes you just need a simple video to remember your ceremony. We include this option because we wish we had it at our wedding. Simple, single camera, filming down the aisle. </p>
+                                                                <p class="tooltip__text">คำอธิบาย3</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1406,11 +1406,11 @@
                                             <div class="pricing__top-small is--blue">
                                                 <div class="digital">
                                                     <h4>
-                                                        Digital
+                                                        GALEWALEE
                                                         <br/>
                                                     </h4>
                                                     <div class="tooltip__title">
-                                                        <h4>Only</h4>
+                                                        <h4>5 ขวบ</h4>
                                                         <div class="tooltip">
                                                             <div class="tooltip__icon">
                                                                 <div class="svg w-embed">
@@ -1427,7 +1427,7 @@
                                                                 </div>
                                                                 <div class="tooltip__card">
                                                                     <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc99bfc16d98b9ac829be60_tooltip-top.svg" loading="lazy" alt="" class="tooltip__top"/>
-                                                                    <p class="tooltip__text">If film isn’t your vibe, we respect that! 🤙🏻 You might choose this option if your wedding is mostly indoors or film isn’t in the budget. We edit our digital photos to emulate the film goodness as best as we can. You’ll love them either way! ✨</p>
+                                                                    <p class="tooltip__text">คำอธิบาย4</p>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1438,11 +1438,11 @@
                                                 </a>
                                                 <div class="film">
                                                     <h4>
-                                                        Film +
+                                                        GALEWALEE
                                                         <br/>
                                                     </h4>
                                                     <div class="tooltip__title">
-                                                        <h4>Digital</h4>
+                                                        <h4>5 คน</h4>
                                                         <div class="tooltip">
                                                             <div class="tooltip__icon">
                                                                 <div class="svg w-embed">
@@ -1459,7 +1459,7 @@
                                                                 </div>
                                                                 <div class="tooltip__card">
                                                                     <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc99bfc16d98b9ac829be60_tooltip-top.svg" loading="lazy" alt="" class="tooltip__top"/>
-                                                                    <p class="tooltip__text">You can call us film freaks 🤪The colors, the glow, the grain ✨ we can’t get over it! Most of the photos here are shot on film - Kodak Portra 400 to be exact 🤩 At the end of the day, film and digital both have their place so, we use both where they shine best! P.S. The cost on this one varies depending on the coverage hours. </p>
+                                                                    <p class="tooltip__text">คำอธิบาย5 </p>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1477,11 +1477,11 @@
                                             <div class="pricing__photo">
                                                 <div>
                                                     <h4>
-                                                        Photo
+                                                        Which year
                                                         <br/>
                                                     </h4>
                                                     <div class="tooltip__title">
-                                                        <h4>Booth</h4>
+                                                        <h4>do you know</h4>
                                                         <div class="tooltip">
                                                             <div class="tooltip__icon">
                                                                 <div class="svg w-embed">
@@ -1522,7 +1522,7 @@
                                                             </div>
                                                         </div>
                                                     </a>
-                                                    <h4 class="pricing__photo-number">0</h4>
+                                                    <h4 class="pricing__photo-number">1</h4>
                                                     <a href="#" class="pricing__photo-zoom is--plus w-inline-block">
                                                         <div class="pricing__photo-zoom-icon">
                                                             <div class="svg w-embed">
@@ -1541,7 +1541,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <h4>Hours</h4>
+                                                <h4>gale</h4>
                                             </div>
                                             <div class="pricing__map">
                                                 <div class="pricing__map-wrap">
