--- a/index.html
+++ b/index.html
@@ -1498,7 +1498,7 @@
                                                                 </div>
                                                                 <div class="tooltip__card is--reverse is--off">
                                                                     <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc99bfc16d98b9ac829be60_tooltip-top.svg" loading="lazy" alt="" class="tooltip__top is--reverse is--off"/>
-                                                                    <p class="tooltip__text">No iPad here. One of our hooman photographers will take amazing photos of your friends and fam against a background (of your choice) and we’ll print them out right on the spot! 🎉Did someone say props?!🤓 Got em ✅</p>
+                                                                    <p class="tooltip__text">คำอธิบาย7</p>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1547,7 +1547,7 @@
                                                 <div class="pricing__map-wrap">
                                                     <div class="pricing__map-top">
                                                         <div class="pricing__map-heading">
-                                                            <h4>Location</h4>
+                                                            <h4>Do you know gale from</h4>
                                                             <div class="tooltip">
                                                                 <div class="tooltip__icon">
                                                                     <div class="svg w-embed">
@@ -1564,12 +1564,12 @@
                                                                     </div>
                                                                     <div class="tooltip__card">
                                                                         <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc99bfc16d98b9ac829be60_tooltip-top.svg" loading="lazy" alt="" class="tooltip__top"/>
-                                                                        <p class="tooltip__text">Hop on-board our private jet! ✈️ Jk that doesn’t exist. But here are easy flat rates to U.S. regions that cover our travel and accommodations! International? Shoot us a message 💌</p>
+                                                                        <p class="tooltip__text">คำอธิบาย6</p>
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <p id="slider-output" class="p2 region">Select Region</p>
+                                                        <p id="slider-output" class="p2 region">Select</p>
                                                     </div>
                                                     <div class="pricing__map-bottom">
                                                         <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc84575bdeb2e74892fb6d6_map.svg" loading="lazy" alt="" class="pricing__map-img map-show"/>
@@ -1577,7 +1577,7 @@
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc9857763390ef7df280dcb_wc-c.svg" loading="lazy" alt="" class="map-hover"/>
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc9857739e76507e86e3e71_wc-h.svg" loading="lazy" alt="" class="map-click"/>
                                                             <a href="#" class="west-coast item-map w-inline-block">
-                                                                <p class="map-text">West Coast</p>
+                                                                <p class="map-text">Traimudom</p>
                                                                 <p class="map-price">1000</p>
                                                             </a>
                                                         </div>
@@ -1585,40 +1585,40 @@
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc98576d93bc76b2c461f6b_rm-c.svg" loading="lazy" alt="" class="map-hover"/>
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc9857639e7654eb16e3e70_rm-h.svg" loading="lazy" alt="" class="map-click"/>
                                                             <a href="#" class="rocky-mountain item-map w-inline-block">
-                                                                <p class="map-text">Rocky Mountain</p>
-                                                                <p class="map-price">1200</p>
+                                                                <p class="map-text">Nitade</p>
+                                                                <p class="map-price">1000</p>
                                                             </a>
                                                         </div>
                                                         <div class="map__region">
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc98577b829db6e28f4e3f0_sc-c.svg" loading="lazy" alt="" class="map-hover"/>
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc9857674d2b9224affe5ee_sc-h.svg" loading="lazy" alt="" class="map-click"/>
                                                             <a href="#" class="southern-california item-map w-inline-block">
-                                                                <p class="map-text">Southern California</p>
-                                                                <p class="map-price">0</p>
+                                                                <p class="map-text">Debate Society</p>
+                                                                <p class="map-price">1000</p>
                                                             </a>
                                                         </div>
                                                         <div class="map__region">
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc985777652511e6eb56a38_ec-c.svg" loading="lazy" alt="" class="map-hover"/>
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc98576b6f7e5380b7f302a_ec-h.svg" loading="lazy" alt="" class="map-click"/>
                                                             <a href="#" class="east-coast item-map w-inline-block">
-                                                                <p class="map-text">East Coast</p>
-                                                                <p class="map-price">2000</p>
+                                                                <p class="map-text">St.Francis Xavier</p>
+                                                                <p class="map-price">1000</p>
                                                             </a>
                                                         </div>
                                                         <div class="map__region">
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc98577b66a3e2b5a59e6f2_mw-c.svg" loading="lazy" alt="" class="map-hover"/>
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc985767a5165b3da69f56f_mw-h.svg" loading="lazy" alt="" class="map-click"/>
                                                             <a href="#" class="midwest item-map w-inline-block">
-                                                                <p class="map-text">Midwest</p>
-                                                                <p class="map-price">1500</p>
+                                                                <p class="map-text">Chula</p>
+                                                                <p class="map-price">1000</p>
                                                             </a>
                                                         </div>
                                                         <div class="map__region">
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc98577f70cae28fb8d74c7_gc-c.svg" loading="lazy" alt="" class="map-hover"/>
                                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc98577bfd0bf22653af260_gc-h.svg" loading="lazy" alt="" class="map-click"/>
                                                             <a href="#" class="gulf-coast item-map w-inline-block">
-                                                                <p class="map-text">Gulf Coast</p>
-                                                                <p class="map-price">2000</p>
+                                                                <p class="map-text">Pub/Bar</p>
+                                                                <p class="map-price">1000</p>
                                                             </a>
                                                         </div>
                                                     </div>
