--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
                                             <div href="#up" class="pricing__total">
                                                 <div class="pricing__total-contain">
                                                     <h4>Total</h4>
-                                                    <h2 class="pricing__total-number">$0,000</h2>
+                                                    <h2 class="pricing__total-number">0,000 points</h2>
                                                 </div>
                                             </div>
                                             <div class="pricing__form">
@@ -1638,7 +1638,7 @@
                                                     <form id="wf-form-Pricing-Form" name="wf-form-Pricing-Form" data-name="Pricing Form">
                                                         <div class="pricing__form-contain">
                                                             <div class="pricing__form-left">
-                                                                <h4>Save my Package</h4>
+                                                                <h4>Save your own Love</h4>
                                                                 <div class="w-embed">
                                                                     <input type="hidden" id="total-hours" name="total-hours" value="">
                                                                     <input type="hidden" id="engagement-shoot" name="engagement-shoot" value="">
