--- a/index.html
+++ b/index.html
@@ -1652,7 +1652,7 @@
                                                             </div>
                                                             <div class="tricks-press">
                                                                 <p class="tricks-press_text">
-                                                                    HOLD To
+                                                                    HOLD to
                                                                     <br/>
                                                                     Capture
                                                                 </p>
