--- a/index.html
+++ b/index.html
@@ -1654,7 +1654,7 @@
                                                                 <p class="tricks-press_text">
                                                                     HOLD to
                                                                     <br/>
-                                                                    Capture!
+                                                                    Capture
                                                                 </p>
                                                             </div>
                                                         </div>
