--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8"/>
     <title>GALEWALEE GRADUATION</title>
-    <meta content="Here there! We’re Mack and Pouya - professional cake tasters, wedding criers, and just outright lovers of love. In short, we’re pretty big fans of marriage! Marriage is such a special commitment and your wedding marks the witness and celebration of this bond. We’re super stoked for this amazing next chapter of your life. We wholeheartedly recommend it!" name="description"/>
-    <meta content="Mack &amp; Pouya Photography" property="og:title"/>
-    <meta content="Here there! We’re Mack and Pouya - professional cake tasters, wedding criers, and just outright lovers of love. In short, we’re pretty big fans of marriage! Marriage is such a special commitment and your wedding marks the witness and celebration of this bond. We’re super stoked for this amazing next chapter of your life. We wholeheartedly recommend it!" property="og:description"/>
-    <meta content="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc7abf37271c7c103725b9b_Social.jpg" property="og:image"/>
-    <meta content="Mack &amp; Pouya Photography" property="twitter:title"/>
-    <meta content="Here there! We’re Mack and Pouya - professional cake tasters, wedding criers, and just outright lovers of love. In short, we’re pretty big fans of marriage! Marriage is such a special commitment and your wedding marks the witness and celebration of this bond. We’re super stoked for this amazing next chapter of your life. We wholeheartedly recommend it!" property="twitter:description"/>
-    <meta content="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc7abf37271c7c103725b9b_Social.jpg" property="twitter:image"/>
+    <meta content="เนื่องในโอกาสที่เกวลีเรียนจบการศึกษาระดับปริญญาตรี ที่คณะนิเทศศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย" name="description"/>
+    <meta content="GALEWALEE GRADUATION" property="og:title"/>
+    <meta content="เนื่องในโอกาสที่เกวลีเรียนจบการศึกษาระดับปริญญาตรี ที่คณะนิเทศศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย" property="og:description"/>
+    <meta content="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/Untitled_Artwork%20112.png" property="og:image"/>
+    <meta content="GALEWALEE GRADUATION" property="twitter:title"/>
+    <meta content="เนื่องในโอกาสที่เกวลีเรียนจบการศึกษาระดับปริญญาตรี ที่คณะนิเทศศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย" property="twitter:description"/>
+    <meta content="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/Untitled_Artwork%20112.png" property="twitter:image"/>
     <meta property="og:type" content="website"/>
     <meta content="summary_large_image" name="twitter:card"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
