--- a/index.html
+++ b/index.html
@@ -1971,15 +1971,15 @@
                             <div class="footer__bottom">
                                 <div class="footer__copyright">
                                     <p class="footer__text">
-                                        © 2020 All Rights Reserved.
+                                        Please write
                                         <br/>
-                                        Website by 
-                                        <a href="https://www.tricksdesign.com/" target="_blank" class="footer__link">T.RICKS</a>
+                                        GALE's 
+                                        <a href="https://docs.google.com/presentation/d/1lohUdSxHsNH18B8ppRTr_J3qwkPLZtWQtHijzjNs65U/edit?usp=sharing" target="_blank" class="footer__link">BYENIOR BOOK</a>
                                     </p>
                                 </div>
                                 <div class="footer__privacy">
                                     <p class="footer__text">
-                                        <a href="#" class="footer__link privacy-link">Privacy Policy</a>
+                                      <div>GALEWALEE TAEPRASERT</div>
                                     </p>
                                 </div>
                                 <div class="footer__social">
