--- a/index.html
+++ b/index.html
@@ -1984,17 +1984,17 @@
                                 </div>
                                 <div class="footer__social">
                                     <div class="social__icon">
-                                        <a href="https://www.facebook.com/mackandpouya" target="_blank" class="social__link is--light-blue w-inline-block">
+                                        <a href="https://www.facebook.com/galewalee" target="_blank" class="social__link is--light-blue w-inline-block">
                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fca1a6d65765e6aade3737f_facebook.svg" loading="lazy" alt="" class="social__img"/>
                                         </a>
                                     </div>
                                     <div class="social__icon">
-                                        <a href="https://www.instagram.com/mackandpouya/" target="_blank" class="social__link is--pink w-inline-block">
+                                        <a href="https://www.instagram.com/galewalee/" target="_blank" class="social__link is--pink w-inline-block">
                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fca1a6e24622cfcec9bcb64_instagram.svg" loading="lazy" alt="" class="social__img"/>
                                         </a>
                                     </div>
                                     <div class="social__icon">
-                                        <a href="mailto:hello@mackandpouya.com" class="social__link w-inline-block">
+                                        <a href="mailto:galewaleegale@gmail.com" class="social__link w-inline-block">
                                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fca1a6ef9f03cfe4654e621_email.svg" loading="lazy" alt="" class="social__img"/>
                                         </a>
                                     </div>
