--- a/index.html
+++ b/index.html
@@ -1936,7 +1936,7 @@
                                     <div data-animation="slide" data-disable-swipe="1" data-duration="500" class="footer__slider w-slider">
                                         <div class="footer__mask w-slider-mask">
                                             <div class="footer__slide w-slide">
-                                                <input type="text" class="footer__field w-input" maxlength="256" name="Date-7" data-name="Date 7" placeholder="00/00/0000" id="Date-7" required=""/>
+                                                <input type="text" class="footer__field w-input" maxlength="256" name="Date-7" data-name="Date 7" placeholder="xx/10/2021" id="Date-7" required=""/>
                                             </div>
                                             <div class="footer__slide w-slide">
                                                 <input type="text" class="footer__field w-input" maxlength="256" name="Name-3" data-name="Name 3" placeholder="Name" id="Name-3" required=""/>
